--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Rest-assured: REST API Testing made easy (for use with the integration tests) -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
