--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- Surefire plugin (Unit Tests execution). Usage: mvn test -->
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+			</plugin>
 		</plugins>
+
 	</build>
 
 </project>
